[Android]ui 弹框适配

--- a/Android/common/ui-widget/src/main/res/layout/dialog_input_password.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_input_password.xml
@@ -2,9 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="230dp"
-    android:background="@drawable/bg_full_radius_white_7">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/bg_full_radius_white_7"
+    android:paddingHorizontal="24dp"
+    android:paddingVertical="30dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
@@ -48,27 +51,38 @@
         app:layout_constraintTop_toTopOf="@id/etDeviceName"
         tools:visibility="visible" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl50"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCancel"
         style="@style/def_btn_empty"
+        android:layout_width="wrap_content"
         android:layout_marginTop="39dp"
         android:layout_marginEnd="10dp"
+        android:gravity="center"
+        android:paddingHorizontal="24dp"
         android:text="@string/cancel"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintEnd_toStartOf="@id/btnDefine"
-        app:layout_constraintStart_toStartOf="@id/tvTitle"
+        app:layout_constraintEnd_toStartOf="@id/gl50"
         app:layout_constraintTop_toBottomOf="@id/etDeviceName" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDefine"
         style="@style/def_btn_full"
+        android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
+        android:gravity="center"
+        android:paddingHorizontal="24dp"
         android:text="@string/confirm"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="@id/tvTitle"
-        app:layout_constraintStart_toEndOf="@id/btnCancel"
+        app:layout_constraintStart_toEndOf="@id/gl50"
         app:layout_constraintTop_toTopOf="@id/btnCancel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
