--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_center_fragment_alert.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_center_fragment_alert.xml
@@ -40,33 +40,33 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbLeft"
-        android:layout_marginStart="25dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
+        android:paddingHorizontal="24dp"
         android:text="@string/voice_room_cancel"
-        android:layout_width="115dp"
+        android:layout_width="wrap_content"
         style="@style/voice_chatroom_cancel_button_text_style"
         android:textColor="@color/voice_dark_grey_color_040925"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/gl50"
         app:layout_constraintTop_toBottomOf="@+id/mtContent" />
 
-<!--    <androidx.constraintlayout.widget.Guideline-->
-<!--        android:id="@+id/gl50"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintGuide_percent="0.5" />-->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl50"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbRight"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
-        android:layout_width="115dp"
+        android:paddingHorizontal="24dp"
+        android:layout_width="wrap_content"
         style="@style/voice_chatroom_confirm_button_text_style"
         android:gravity="center"
         android:text="@string/voice_room_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/gl50"
         app:layout_constraintTop_toTopOf="@+id/mbLeft" />
 </androidx.constraintlayout.widget.ConstraintLayout>
