--- a/Android/common/ui-widget/src/main/res/layout/dialog_common.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_common.xml
@@ -2,17 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="220dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:background="@drawable/bg_full_white_r16"
     android:elevation="1dp"
-    android:minHeight="220dp">
+    android:paddingHorizontal="24dp"
+    android:paddingVertical="30dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
         android:paddingHorizontal="20dp"
         android:textColor="@color/def_text_color_040"
         android:textSize="18sp"
@@ -24,7 +25,6 @@
         android:id="@+id/tvDesc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="25dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:lineSpacingExtra="10dp"
@@ -37,27 +37,38 @@
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         tools:visibility="visible" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl50"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLeft"
         style="@style/def_btn_empty"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/bg_full_white_ef_r50"
+        android:gravity="center"
+        android:paddingHorizontal="24dp"
         android:text="@string/cancel"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintEnd_toStartOf="@id/btnRight"
-        app:layout_constraintStart_toStartOf="@id/tvTitle"
+        app:layout_constraintEnd_toStartOf="@id/gl50"
         app:layout_constraintTop_toBottomOf="@id/tvDesc" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnRight"
         style="@style/def_btn_full"
-        android:layout_marginHorizontal="10dp"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:gravity="center"
+        android:paddingHorizontal="24dp"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="@id/tvTitle"
-        app:layout_constraintStart_toEndOf="@id/btnLeft"
+        app:layout_constraintStart_toEndOf="@id/gl50"
         app:layout_constraintTop_toTopOf="@id/btnLeft" />
 </androidx.constraintlayout.widget.ConstraintLayout>
