--- a/Android/common/ui-widget/src/main/res/layout/dialog_swipe_captcha.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_swipe_captcha.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="295dp"
-    android:layout_height="365dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_full_white_r16"
     android:clipChildren="false"
+    android:layout_gravity="center"
     android:clipToPadding="false">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -49,26 +50,26 @@
     <SeekBar
         android:id="@+id/dragBar"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_below="@id/swipeCaptchaView"
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="10dp"
         android:progressDrawable="@drawable/bg_full_grey_ec_r10"
         android:splitTrack="false"
+        android:layout_marginTop="10dp"
         android:thumb="@mipmap/ic_btn_seekbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/swipeCaptchaView" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/iBtnRefresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="15dp"
         android:background="@null"
         android:src="@mipmap/ic_refresh"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/dragBar"
+        app:layout_constraintBottom_toBottomOf="@id/dragBar"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
