--- a/Android/common/ui-widget/src/main/res/layout/dialog_user_agreement.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_user_agreement.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
-    android:layout_height="365dp"
-    android:background="@drawable/bg_full_radius_white_20">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/bg_full_radius_white_20"
+    android:minHeight="300dp"
+    android:paddingHorizontal="24dp"
+    android:paddingVertical="30dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:text="欢迎体验声网服务"
         android:textColor="@color/def_text_color_040"
         android:textSize="18sp"
@@ -21,8 +25,7 @@
         android:id="@+id/tvContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="22dp"
-        android:layout_marginVertical="20dp"
+        android:layout_marginVertical="10dp"
         android:overScrollMode="never"
         app:layout_constraintBottom_toTopOf="@id/btnAgree"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,31 +37,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/def_text_grey_6c7"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:text="大就kfhvcajkhfdkadhakjhd大就kfhvcajkhfdkadhakjhdkahdjahdakjhdkjahdka大就kfhvcajkhfdkadhakjhdkahdjahdakjhdkjahdka大就kfhvcajkhfdkadhakjhdkahdjahdakjhdkjahdka大就kfhvcajkhfdkadhakjhdkahdjahdakjhdkjahdka大就kfhvcajkhfdkadhakjhdkahdjahdakjhdkjahdka大就kfhvcajkhfdkadhakjhdkahdjahdakjhdkjahdkakahdjahdakjhdkjahdka" />
     </androidx.core.widget.NestedScrollView>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl50"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDisagree"
         style="@style/def_btn_empty"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
+        android:paddingHorizontal="16dp"
         android:text="@string/disagree"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnAgree"
-        app:layout_constraintStart_toStartOf="@id/tvContent" />
+        app:layout_constraintEnd_toStartOf="@+id/gl50" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAgree"
         style="@style/def_btn_full"
-        android:layout_width="0dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:gravity="center"
+        android:paddingHorizontal="24dp"
         android:text="@string/agree"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/tvContent"
-        app:layout_constraintStart_toEndOf="@+id/btnDisagree"
+        app:layout_constraintStart_toEndOf="@+id/gl50"
         app:layout_constraintTop_toTopOf="@id/btnDisagree" />
 </androidx.constraintlayout.widget.ConstraintLayout>
