--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_center_fragment_alert.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_center_fragment_alert.xml
@@ -5,8 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:paddingTop="30dp"
-    android:background="@drawable/voice_bg_rect_radius20_white">
+    android:background="@drawable/voice_bg_rect_radius20_white"
+    android:paddingVertical="30dp">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtTitle"
@@ -25,48 +25,47 @@
         android:id="@+id/mtContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="27dp"
+        android:gravity="center"
+        android:lineSpacingExtra="2dp"
         android:textColor="@color/voice_dark_grey_color_6c7192"
         android:textSize="@dimen/voice_sp_14"
-        android:gravity="center"
-        app:layout_goneMarginTop="0dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="27dp"
-        android:lineSpacingExtra="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mtTitle"
+        app:layout_goneMarginTop="0dp"
         tools:text="Exit the chatroom and recreate a new one?" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbLeft"
-        android:layout_marginStart="25dp"
+        style="@style/voice_chatroom_cancel_button_text_style"
+        android:layout_width="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
+        android:paddingHorizontal="24dp"
         android:text="@string/voice_room_cancel"
-        android:layout_width="115dp"
-        style="@style/voice_chatroom_cancel_button_text_style"
         android:textColor="@color/voice_dark_grey_color_040925"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/gl50"
         app:layout_constraintTop_toBottomOf="@+id/mtContent" />
 
-<!--    <androidx.constraintlayout.widget.Guideline-->
-<!--        android:id="@+id/gl50"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintGuide_percent="0.5" />-->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl50"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbRight"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"
-        android:layout_width="115dp"
         style="@style/voice_chatroom_confirm_button_text_style"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
         android:gravity="center"
+        android:paddingHorizontal="24dp"
         android:text="@string/voice_room_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/gl50"
         app:layout_constraintTop_toTopOf="@+id/mbLeft" />
 </androidx.constraintlayout.widget.ConstraintLayout>
