--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_common.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_common.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@drawable/bg_full_white_r16"
@@ -56,7 +56,8 @@
         android:text="@string/cancel"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintEnd_toStartOf="@id/gl50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btnRight"
         app:layout_constraintTop_toBottomOf="@id/tvDesc" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -71,6 +72,7 @@
         android:layout_marginStart="10dp"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintStart_toEndOf="@id/gl50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnLeft"
         app:layout_constraintTop_toBottomOf="@id/tvDesc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
