--- a/Android/scenes/ktv/src/main/res/values/arrays.xml
+++ b/Android/scenes/ktv/src/main/res/values/arrays.xml
@@ -41,4 +41,12 @@
         <item>中</item>
         <item>高</item>
     </string-array>
+
+    <string-array name="ktv_aiaec_strength">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
