optimize file structure

--- a/Android/scenes/ktv/src/main/res/layout/fragment_profile.xml
+++ b/Android/scenes/ktv/src/main/res/layout/fragment_profile.xml
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="音质"
+        android:text="@string/ktv_voice_quality"
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
@@ -195,7 +195,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="低延时模式"
+        android:text="@string/ktv_low_latency"
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
@@ -226,7 +226,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="降低背景噪音"
+        android:text="@string/ktv_voice_AINS"
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
@@ -302,7 +302,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="AIAEC 开关 （beta）"
+        android:text="@string/ktv_AIAEC_switcher"
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
@@ -324,7 +324,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="AIAEC 强度选择（beta）"
+        android:text="@string/ktv_AIAEC_strength"
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
