fix hardcode string

--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -14,7 +14,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="70dp"
         android:gravity="center"
-        android:text="歌词加载失败"
+        android:text="@string/ktv_lrc_failed"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:visibility="visible"
@@ -30,7 +30,7 @@
         android:layout_height="30dp"
         android:background="@drawable/ktv_skip_btn_bg"
         android:gravity="center"
-        android:text="点击重试"
+        android:text="@string/ktv_retry"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:insetBottom="0dp"
         android:minWidth="0dp"
         android:padding="0dp"
-        android:text="离开合唱"
+        android:text="@string/ktv_leave_chorus"
         android:textAppearance="?android:attr/textAppearanceButton"
         android:textColor="#9BA2AB"
         android:textSize="8sp"
