[Android]add sound card

--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_music_setting.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_music_setting.xml
@@ -55,6 +55,31 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ktv_virtual_sound_card"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/switchSoundCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="240dp"
+            android:drawableRight="@mipmap/ktv_ic_arrow_riight"
+            android:drawablePadding="5dp"
+            android:text="关闭"
+            android:textColor="@color/def_text_grey_6c7" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:visibility="gone"
         android:gravity="center"
         android:orientation="horizontal">
