--- a/Android/scenes/ktv_relay/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/activity_room_list.xml
@@ -11,7 +11,7 @@
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
         style="@style/title_view"
-        app:ctv_centerText="@string/ktv_online"
+        app:ctv_centerText="@string/ktv_relay"
         tools:ignore="MissingConstraints" />
 
 
