--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_active_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_active_view.xml
@@ -13,12 +13,24 @@
         android:layout_height="20dp"
         android:background="@drawable/ktv_skip_btn_bg"
         android:gravity="center"
-        android:text="1/1"
+        android:text="@string/ktv_tips"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivGameTips"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:background="@mipmap/ktv_game_tips"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="10dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <io.agora.scene.ktv.singrelay.widget.lrcView.LrcControlView
