--- a/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_idle_view.xml
+++ b/Android/scenes/ktv_relay/src/main/res/layout/ktv_layout_game_idle_view.xml
@@ -8,18 +8,44 @@
     android:background="@mipmap/ktv_game_background"
     tools:layout_height="320dp">
 
+    <TextView
+        android:id="@+id/tvSongTab"
+        android:layout_width="41dp"
+        android:layout_height="20dp"
+        android:background="@drawable/ktv_skip_btn_bg"
+        android:gravity="center"
+        android:text="@string/ktv_tips"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivGameTips"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:background="@mipmap/ktv_game_tips"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="10dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/messageText"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginTop="108dp"
         android:background="@mipmap/ktv_game_idle_text_background"
         android:text="@string/ktv_game_room_owner_idle"
         android:textSize="16dp"
         android:textStyle="bold"
         android:gravity="center"
         android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
     </androidx.appcompat.widget.AppCompatTextView>
 
@@ -115,7 +141,7 @@
         android:layout_width="82dp"
         android:layout_height="34dp"
         android:layout_marginBottom="34dp"
-        android:background="@mipmap/ic_diange"
+        android:background="@mipmap/ktv_game_start"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
